# bt-ccxt-store

./: .gitignore  INSTALL.md  README.md  install.py  pyproject.toml  run_okx.sh
ccxtbt/: ccxtbroker.py  ccxtstore.py
exchanges/okx/: buy-order.py
